--- a/pat/templates/account.html
+++ b/pat/templates/account.html
@@ -96,6 +96,11 @@
             {{ form.trainer.biography(class="form-control form-control-lg") }}
             {% endif %}
         </div>
+                <div class="form-group">
+            {{ form.trainer.specialization.label }}
+            {{ form.trainer.specialization(class="form-control form-control-lg") }}
+
+        </div>
                 {% elif current_user.group_id == 1 %}
          <div class="form-group">
             {{ form.learner.height.label }}
@@ -132,10 +137,16 @@
                 <span>{{ error }}</span>
                 {% endfor %}
             </div>
+
             {% else %}
             {{ form.learner.phone_number(class="form-control form-control-lg") }}
             {% endif %}
         </div>
+                 <div class="form-group">
+            {{ form.learner.gender.label }}
+            {{ form.learner.gender(class="form-control form-control-lg") }}
+        </div>
+
                 {% endif %}
 </fieldset>
         <div class="form-group">
