--- a/pat/templates/base.html
+++ b/pat/templates/base.html
@@ -50,11 +50,7 @@
               <a class="nav-item nav-link" href="{{ url_for('register_admin') }}">Create_admin</a>
                   {% endif %}
                 {% elif  current_user.group_id == 2 %}
-                <a class="nav-item nav-link" href="#">My trainings</a>
                 <a class="nav-item nav-link" href="{{ url_for('create_training') }}">Create_training</a>
-                {% elif  current_user.group_id == 1%}
-                <a class="nav-item nav-link" href="#">My registrations</a>
-                {% else %}
                 {% endif %}
 
             </div>
@@ -67,7 +63,6 @@
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('learner') }}">Register</a>
               {% endif %}
             </div>
           </div>
@@ -85,7 +80,7 @@
         <div class="col-md-4">
           <div class="content-section">
             <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <p class='text-muted'>
               <ul class="list-group">
                {% if current_user.group_id == 3 or current_user.group_id == 4  %}
 
@@ -97,6 +92,7 @@
               {% endif %}
               {% if current_user.is_authenticated == False %}
                 <a class="nav-item nav-link" href="{{ url_for('register_trainer') }}"> <li class="list-group-item list-group-item-light">Register Trainer</li></a>
+              <a class="nav-item nav-link" href="{{ url_for('learner') }}"> <li class="list-group-item list-group-item-light">Register Learner</li></a>
               {% endif %}
               </ul>
             </p>
@@ -127,7 +123,7 @@
       {% endfor %}],
       eventClick:function(event)
     {
-     if(confirm("Are you sure you want to remove it?"))
+     if(confirm("Open training page?"))
      {
       let id = event.id;
       console.log(id);
