--- a/pat/templates/training.html
+++ b/pat/templates/training.html
@@ -50,7 +50,7 @@
              <div>
                 {% if trainings.status == "open" and current_user not in trainings.learner and trainings.learner|length < trainings.number %}
            <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#registerModals">Register</button>
-               {% elif current_user in trainings.learner %}
+               {% elif current_user in trainings.learner and trainings.training_end > time %}
             <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#unregisterModals">Unregister</button>
                  {% endif %}
           </div>
